2007-04-03 [colin]	2.8.1cvs85

	* src/inc.c
		Fix double-ask of offline override in
		certain cases
	* src/imap.c
	* src/imap.h
	* src/imap_gtk.c
		Much more efficient way to synchronise
		for offline use
	* src/etpan/imap-thread.c
		Fix possible segs
	* src/folder.c
	* src/gtk/quicksearch.c
		Fix some GUI lags

2007-04-03 [paul]	2.8.1cvs84

	* src/filtering.c
	* src/folder.c
	* src/folder.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_other.c
		Fix sync being done too late
		Thanks to Colin

2007-04-02 [colin]	2.8.1cvs83

	* src/summaryview.c
		Maemo: Put status and quicksearch at the top
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/spamassassin/spamassassin.c
		Derive trash from inbox if possible

2007-04-02 [paul]	2.8.1cvs82

	* src/plugins/bogofilter/bogofilter_gtk.c
		a few English changes

2007-04-02 [colin]	2.8.1cvs81

	* src/image_viewer.c
		Fix transparent images by using
		GtkImage
	* src/messageview.c
		Flush events (on new windows) to avoid
		having the textview's image resize fail
		to know the available width

2007-04-01 [colin]	2.8.1cvs80

	* src/prefs_account.c
		If no MH mailbox exist, when creating a POP/Local
		account, just create and use the default one 
		instead of bailing with a "Mailbox doesn't exist"
		error

2007-03-31 [colin]	2.8.1cvs79

	* src/prefs_account.c
		Create signature file if it doesn't exist
		before editing
	* src/prefs_toolbar.c
		Maemo: Move "Use default" on the left so
		that people can find it
	* src/common/defs.h
		Maemo: make default editor "Maemopad", 
		default signature file "MyDocs/signature.txt"

2007-03-31 [colin]	2.8.1cvs78

	* src/prefs_account.c
		Maemo: rework account prefs so
		that less horizontal scrolling
		is required

2007-03-31 [colin]	2.8.1cvs77

	* src/folderview.c
	* src/prefs_common.c
	* src/prefs_common.h
		Fix bug 1167, 'Allow not displaying zeros 
		in folder list'. Patch by MartinP

2007-03-31 [colin]	2.8.1cvs76

	* AUTHORS
		Add Jean-Luc Biord
