@@ -2502,3 +2502,4 @@
 ( cvs diff -u -r 1.395.2.294 -r 1.395.2.295 src/summaryview.c;  cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/plugins/bogofilter/bogofilter.c;  cvs diff -u -r 1.18.2.50 -r 1.18.2.51 src/plugins/spamassassin/spamassassin.c;  ) > 2.8.1cvs83.patchset
 ( cvs diff -u -r 1.60.2.30 -r 1.60.2.31 src/filtering.c;  cvs diff -u -r 1.213.2.138 -r 1.213.2.139 src/folder.c;  cvs diff -u -r 1.87.2.39 -r 1.87.2.40 src/folder.h;  cvs diff -u -r 1.204.2.129 -r 1.204.2.130 src/prefs_common.c;  cvs diff -u -r 1.103.2.79 -r 1.103.2.80 src/prefs_common.h;  cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/prefs_other.c;  ) > 2.8.1cvs84.patchset
 ( cvs diff -u -r 1.213.2.139 -r 1.213.2.140 src/folder.c;  cvs diff -u -r 1.179.2.163 -r 1.179.2.164 src/imap.c;  cvs diff -u -r 1.34.2.13 -r 1.34.2.14 src/imap.h;  cvs diff -u -r 1.1.2.44 -r 1.1.2.45 src/imap_gtk.c;  cvs diff -u -r 1.149.2.71 -r 1.149.2.72 src/inc.c;  cvs diff -u -r 1.1.4.76 -r 1.1.4.77 src/etpan/imap-thread.c;  cvs diff -u -r 1.1.2.64 -r 1.1.2.65 src/gtk/quicksearch.c;  ) > 2.8.1cvs85.patchset
+( cvs diff -u -r 1.207.2.159 -r 1.207.2.160 src/folderview.c;  ) > 2.8.1cvs86.patchset
